# portability

./: .gitignore  Cargo.toml  README.md  missing  shell.nix
src/: emulated.rs  lib.rs  main.rs  mmap.rs  sys.rs
test/: build.sh  example_exe.rs  example_exe_crt.rs  example_exe_tls_crt.rs
test2/: Makefile  empty_exe.rs  one_dll.rs  ordinal_dll.def  ordinal_dll.rs  small_dll.rs  tls_exe.rs  two_dll.rs
