[package]
name = "portability"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.8.0", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
memmap2 = "0.9.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = ["Win32_System_Memory", "Win32_Security", "Win32_System_SystemInformation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"
